# metalwork

./: .bazelrc  .envrc  .gitignore  LICENSE  MODULE.bazel  README.md  default.nix  flake.nix  mkdocs.yml
cmake/: metalwork.cmake
conan-config/: json.py
conan-config/profiles/: armv7e-m-llvm
docs/: about.md  cmake.md  index.md
docstrings-cmake/: Cargo.toml
docstrings-cmake/src/: main.rs
lib/: arm-none-eabi-newlib.cmake  default.nix  json.py  profile.toml  settings.yml
mkdocstrings-cmake/: default.nix  pyproject.toml
mkdocstrings-cmake/src/mkdocstrings_handlers/cmake/: debug.py
mkdocstrings-handlers/: default.nix
mkdocstrings-handlers/cmake/src/mkdocstrings_handlers/cmake/: __init__.py  handler.py
parts/arm/st_microelectronics/stm32mp1/conan/: 0001-Remove-call-to-Error_Handler-in-Periph_Lock.patch  0002-Remove-errno-forward-decls-in-newlib-polyfill.patch  BUILD.bazel  CMakeLists.txt  conandata.yml  conanfile.py
parts/arm/st_microelectronics/stm32mp1/conan/test_package/: .gitignore  CMakeLists.txt  conanfile.py
parts/arm/st_microelectronics/stm32mp1/conan/test_package/src/: example.cpp
services/: .gitignore  Makefile  declarations.mk
services/artifactory/: Makefile  artifactory.container  artifactory.volume  nginx.srv
services/debian/: changelog  control  copyright  rules
services/postgresql/: Makefile  postgresql.container  postgresql.volume
smoke-tests/: basic.c  stdlib.c
smoke-tests/arm/: basic.c  platform.h
test/: cmake.sh
